Do not touch ui::ResourceBundle on non-UI thread in web_app_mac.mm

gfx::ImageStorage has a non-thread-safe ref count, and gfx::Image in
ui::ResourceBundle needs to be copied or destroyed on the UI thread.

This CL removes an access to gfx::Image from non-UI thread in web_app_mac.mm,
to avoid a data race.

BUG=714209, 714280

Review-Url: https://codereview.chromium.org/2841433003
Cr-Commit-Position: refs/heads/master@{#468712}

Former-commit-id: 08fb0ca7077abf9c7ddfce597a4015244b16d434